--- a/scss/_mainmenu.scss
+++ b/scss/_mainmenu.scss
@@ -5,10 +5,18 @@ main menu.html{
         font-family: cursive;
         margin: 5rem;
     }
-    .subtitulo{
+    .subtítulo{
         text-align: center;
         font-size: x-large;
         font-family: monospace;
         margin: 2rem;
+    }
+    .menú{
+        text-align: center;
+        margin: 3rem;
+    }
+    .párrafomenú{
+        margin: 3rem;
+        font-size: 15px;
     }
 }
