--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,2 +1,4 @@
-$verde: rgb(127, 207, 174) ;
-$pad:20px;
+$rosa: rgb(215, 158, 169);
+$rosaclarito:rgb(224, 194, 194);
+$rosaoscuro:rgb(215, 89, 89);
+$pad: 20px;
