--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,10 +1,11 @@
 @import "variables";
 @import "body";
 @import "header";
-@import "mainprincipal";
-@import "section"; 
+@import "mainprincipal"; 
 @import "footer";
 @import"maincontacto";
 @import"maingaleria";
 @import"mainmenu";
 @import"mainsucursales";
+@import"mediaquery";
+
