--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -5,120 +6,132 @@
 }
 
 body {
-  background-color: #ffffff;
-  color: white;
-  box-sizing: border-box;
+  background-color: rgb(224, 194, 194);
+}
+body .bodyinicio {
+  background-color: rgb(224, 194, 194);
+  background-image: url(../img/fondo\ de\ inicio.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+}
+body .bodycontacto {
+  background-color: rgb(224, 194, 194);
+  background-image: url(../img/fondo\ de\ contacto.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+}
+body .bodygalería {
+  background-color: rgb(224, 194, 194);
+  background-image: url(../img/fondo\ de\ sucursales.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+}
+body .bodymenú {
+  background-color: rgb(224, 194, 194);
+  background-image: url(../img/fondo\ menú.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+}
+body .bodysucursales {
+  background-color: rgb(224, 194, 194);
+  background-image: url(../img/fondo\ sucursales.jpg);
+  background-size: cover;
+  background-attachment: fixed;
 }
 
-header {
-  background-color: rgb(255, 247, 239) nav;
-  background-color-padding: 20px;
-  background-color-width: 100%;
-  background-color-height: 100px;
-  background-color-margin: 0 auto;
-  background-color-background-color: aliceblue;
-  background-color-display: flex;
-  background-color-justify-content: space-evenly;
-  background-color-border-radius: 10px;
-  background-color-font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-header .logo {
-  width: 40px;
-  margin: auto;
-  padding: 2px;
-}
-header h2 {
-  text-align: center;
-  color: rgb(0, 0, 0);
-  font-size: x-large;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  padding: 1rem;
-}
-header .p-4estilopropio {
-  text-align: center;
-  color: rgb(127, 207, 174);
-  font-family: cursive;
-}
-
-main .section1, .section3 {
-  line-height: 2;
-  padding: 20px;
-}
-main .section1 .p-2lead, .section3 .p-2lead {
-  text-align: center;
-  font-size: x-large;
+header .stylepropio {
   font-family: serif;
+  color: rgb(215, 89, 89);
+  text-align: center;
 }
-main .section1 .section2, .section3 .section2 {
+header .sub {
+  font-family: fantasy;
+  color: rgb(215, 89, 89);
+  text-align: center;
+}
+header .logocoffee {
+  width: 95px;
+}
+header .colonav {
+  background-color: rgb(215, 158, 169);
+}
+
+main .restaurante {
+  text-align: center;
+}
+main .párrafo1 {
+  text-align: center;
+  font-size: 30px;
+  padding: 0;
+  margin: 5rem;
+  font-family: "Times New Roman", Times, serif;
+}
+main .párrafo2 {
+  text-align: center;
+  font-size: 30px;
+  padding: 0;
+  margin: 5rem;
+  font-family: "Times New Roman", Times, serif;
+}
+main .vídeo {
   text-align: center;
   margin: 5rem;
 }
 
-section .acordeon {
-  width: 700px;
+footer .footer {
+  text-align: center;
   margin: 20px auto;
+  background-color: rgb(215, 158, 169);
+  padding: 15px;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
 }
-section .acordeon {
+footer .social {
   text-align: center;
-  color: rgb(0, 0, 0);
-  border: solid rgb(194, 183, 183) 2px;
-  padding: 1rem;
-}
-section .accordion-header {
-  font-family: inherit;
-}
-section .banco {
-  width: 100px;
-}
-section .mercado {
-  width: 100px;
-}
-section .efectivo {
-  width: 100px;
-}
-
-footer {
-  text-align: center;
-  font-size: 20px;
-  color: black;
-  background-color: rgba(236, 231, 223, 0.938);
-  width: 90%;
-  height: 100px;
-  margin: 5rem;
-}
-footer .socialink {
-  text-align: center;
-}
-footer .seguirclass {
-  font-family: cursive;
+  width: 40px;
 }
 
 main contacto.html .contactolocal {
+  margin: 3rem;
   text-align: center;
-  font-size: xx-large;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 40px;
+  font-family: "Courier New", Courier, monospace;
 }
 main contacto.html .contactoformulario {
+  margin: 3rem;
   text-align: center;
-  font-size: x-large;
+  font-size: 30px;
   font-family: "Times New Roman", Times, serif;
 }
-main contacto.html .formulario {
+main contacto.html .forms {
   width: 500px;
-  margin-top: 74px;
-  margin-left: 675px;
-  border: solid rgb(204, 186, 186) 2px;
+  margin: 0 auto;
+  border: solid rgb(209, 128, 128) 3px;
   padding: 1rem;
 }
-main contacto.html .section2 {
-  text-align: center;
-  margin: 5rem;
+main contacto.html .acordeon {
+  width: 700px;
+  margin: 0 auto;
+  padding: 1rem;
+}
+main contacto.html .banco {
+  width: 100px;
+}
+main contacto.html .mercado {
+  width: 100px;
+}
+main contacto.html .efectivo {
+  width: 100px;
 }
 
-main galeria.html .caja {
+main galeria.html .imágenes {
   display: flex;
-  justify-content: center;
-  padding-top: 60px;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+main galeria.html img {
+  margin: 30px;
 }
 
 main menu.html .principal {
@@ -127,36 +140,63 @@ main menu.html .principal {
   font-family: cursive;
   margin: 5rem;
 }
-main menu.html .subtitulo {
+main menu.html .subtítulo {
   text-align: center;
   font-size: x-large;
   font-family: monospace;
   margin: 2rem;
 }
+main menu.html .menú {
+  text-align: center;
+  margin: 3rem;
+}
+main menu.html .párrafomenú {
+  margin: 3rem;
+  font-size: 15px;
+}
 
 main sucursales.html .ubicaciones {
   text-align: center;
-  font-size: xx-large;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 30px;
+  font-family: cursive;
+  margin: 3rem;
 }
 main sucursales.html .mapa {
   text-align: center;
-  font-size: x-large;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 30px;
+  font-family: cursive;
 }
 main sucursales.html .local {
   text-align: center;
-  font-size: x-large;
+  font-size: 20px;
   font-family: "Times New Roman", Times, serif;
 }
-main sucursales.html .mapa2 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-main sucursales.html .cafetera {
+main sucursales.html .sucursal {
   text-align: center;
   margin: 5rem;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 30px;
+}
+main sucursales.html .maps {
+  text-align: center;
+  margin: 3rem;
+}
+@media (max-width: 480px) {
+  .restaurante img {
+    text-align: center;
+    width: 350px;
+    height: 600px;
+  }
+  .imágenes img {
+    text-align: center;
+    width: 350px;
+    height: 600px;
+  }
+  .menú img {
+    text-align: center;
+    width: 300px;
+    height: 500px;
+  }
 }
 
 /*# sourceMappingURL=estilo.css.map */
