--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,14 +1,16 @@
 footer{
-    text-align: center;
-    font-size: 20px;
-    color: black;
-    background-color: rgba(236, 231, 223, 0.938);
-    width: 90%; height: 100px;
-    margin: 5rem;
-    .socialink{
+    .footer{
         text-align: center;
+        margin: 20px auto;
+        background-color: $rosa;
+        padding: 15px;
+        width: 100%; 
+        justify-content: space-between;
+        align-items: center;
     }
-    .seguirclass{
-        font-family: cursive;
+    .social{
+        text-align: center;
+        width: 40px;
+    
     }
 }
