--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,30 +1,18 @@
 header{
-    background-color: rgb(255, 247, 239)
-    nav{
-        padding: $pad;
-        width: 100%; height: 100px;
-        margin: 0 auto;
-        background-color: aliceblue;
-        display: flex;
-        justify-content: space-evenly;
-        border-radius: 10px;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    }
-    .logo{
-        width: 40px;
-        margin: auto;
-        padding: 2px;
-    }
-    h2{
+    .stylepropio{
+        font-family: serif;
+        color: $rosaoscuro; 
         text-align: center;
-        color: rgb(0, 0, 0);
-        font-size: x-large;
-        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        padding: 1rem;
     }
-    .p-4estilopropio{
+    .sub{
+        font-family: fantasy;
+        color: $rosaoscuro;
         text-align: center;
-        color: $verde; 
-        font-family: cursive;
+    }
+    .logocoffee{
+        width: 95px;
+    }
+    .colonav{
+        background-color: $rosa;
     }
 }
