--- a/scss/_maincontacto.scss
+++ b/scss/_maincontacto.scss
@@ -1,23 +1,34 @@
 main contacto.html{
     .contactolocal{
+        margin: 3rem;
         text-align: center;
-        font-size: xx-large;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-size: 40px;
+        font-family: 'Courier New', Courier, monospace;
     }
     .contactoformulario{
+        margin: 3rem;
         text-align: center;
-        font-size: x-large;
+        font-size: 30px;
         font-family: 'Times New Roman', Times, serif;
     }
-    .formulario{
+    .forms{
         width: 500px;
-        margin-top: 74px;
-        margin-left: 675px;
-        border: solid rgb(204, 186, 186) 2px;
-        padding: 1rem
+        margin: 0 auto;
+        border: solid rgb(209, 128, 128) 3px;
+        padding: 1rem;
     }
-    .section2{
-        text-align: center;
-        margin: 5rem;
+    .acordeon{
+        width: 700px;
+        margin: 0 auto;
+        padding: 1rem;
+    }
+    .banco{
+        width: 100px;
+    }
+    .mercado{
+        width: 100px;
+    }
+    .efectivo{
+        width: 100px;
     }
 }
