--- a/scss/_mainsucursales.scss
+++ b/scss/_mainsucursales.scss
@@ -1,26 +1,28 @@
 main sucursales.html{
     .ubicaciones{
         text-align: center;
-        font-size: xx-large;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-size: 30px;
+        font-family: cursive;
+        margin: 3rem;
     }
     .mapa{
         text-align: center;
-        font-size: x-large;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-size: 30px;
+        font-family: cursive;
     }
     .local{
         text-align: center;
-        font-size: x-large;
+        font-size: 20px;
         font-family: 'Times New Roman', Times, serif;
     }
-    .mapa2{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    .cafetera{
+    .sucursal{
         text-align: center;
         margin: 5rem;
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 30px;
+    }
+    .maps{
+        text-align: center;
+        margin: 3rem;
     }
 }
