--- a/css/estilos.css
+++ b/css/estilos.css
@@ -159,6 +159,18 @@ img{
     text-align: center;
     margin: 3rem;
 }
+.contenedor{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    color: black;
+    gap: 20px;
+}
+.card{
+    width: 300px;
+    height: 350px;
+    border: 1px solid black;
+}
 .footer{
     text-align: center;
     margin: 20px auto;
