--- a/css/estilos.css
+++ b/css/estilos.css
@@ -163,13 +163,25 @@ img{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    color: black;
+    color: aliceblue;
     gap: 20px;
 }
 .card{
     width: 300px;
     height: 350px;
+    color: rgb(162, 123, 139);
     border: 1px solid black;
+    margin: 5rem;
+    background-color: rgb(114, 52, 65);
+}
+.carrito{
+    width: 300px;
+    height: 350px;
+    color: rgb(162, 123, 139);
+    border: 1px solid black;
+    margin: 5rem;
+    background-color: rgb(114, 52, 65);
+
 }
 .footer{
     text-align: center;
